--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/node": "22.10.2",
+    "@types/react": "18.3.18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "5.7.2"
   }
 }
